--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Custom JS framework</title>
+    <script src="./custom.js" defer></script>
+    <script src="./user/app.js" defer></script>
 </head>
 <body>
     <div id="container"></div>
-    <script src="./custom.js"></script>
-    <script src="./user/app.js"></script>
 </body>
 </html>
